# zerobus-sdk-go

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  ack.go  build.go  build.sh  build_release.sh  build_rust.sh  ffi.go  go.mod  zerobus.go
.github/ISSUE_TEMPLATE/: feature_request.md  sdk-issue.md
.github/workflows/: check.yml  push.yml  release.yml  test.yml
examples/: README.md  basic_json_usage.go  basic_proto_usage.go  generate_proto.sh  go.mod
examples/basic_example_json/: basic_json_usage.go  go.mod
examples/basic_example_proto/: air_quality.proto  basic_proto_usage.go  generate_proto.sh  go.mod
examples/basic_example_proto/pb/: air_quality.pb.go
sdk/: ack.go  build.go  build_rust.sh  errors.go  ffi.go  ffi_test.go  go.mod  types.go  zerobus.go
sdk/zerobus-ffi/: Cargo.toml  cbindgen.toml  zerobus.h
sdk/zerobus-ffi/src/: lib.rs  tests.rs
tests/: README.md
zerobus-ffi/: Cargo.toml  build.rs
